# pps-piedra-papel-tijera

./: README.md  pyproject.toml
src/tests/: test_hands_recognition.py  test_ruta_actual.py
src/tests/gpu/: test_gpu_v2.py
src/tests/hands_recognition/: test_hands_recognition_run.py  test_hands_recognition_train.py
