[tool.poetry]
name = "pps-piedra-papel-tijera"
version = "0.1.0"
description = ""
authors = ["Nack34 <gmnack9@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
ultralytics = "^8.3.38"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
